Add TokenIndexProviderFactory to extensions list as it's required for token indexes